force-app/main/default/objects/Lead/fields/Desired_Apartment_Type__c.field-meta.xml
<CustomField>
    <fullName>Desired_Apartment_Type__c</fullName>
    <label>Desired Apartment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>