force-app/main/default/objects/Lead/fields/Floor_Preference__c.field-meta.xml
<CustomField>
    <fullName>Floor_Preference__c</fullName>
    <label>Floor Preference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>